<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/zinc_1000"
    tools:context=".ui.fragments.WordPageFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout_wordAndPhonetics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:background="@drawable/bg_word"
        android:orientation="vertical"
        android:padding="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/font_regular"
            tools:text="hello" />

        <TextView
            android:id="@+id/textView_phonetic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:fontFamily="@font/inter_medium"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/font_regular"
            tools:text="hɛˈləʊ" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout_wordDefinition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:background="@drawable/bg_definition"
        android:orientation="vertical"
        android:padding="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_wordAndPhonetics">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout_hearTheWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_hearTheWordTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/hear_the_word"
                android:textColor="@color/white"
                android:textSize="@dimen/font_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_toggleFavoriteWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_outline_heart_icon"
                android:src="@drawable/ic_heart_outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView_meaningsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"
            android:fontFamily="@font/inter_medium"
            android:text="@string/meanings"
            android:textColor="@color/white"
            android:textSize="@dimen/font_regular" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_meaningsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_standard"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="2"
            tools:listitem="@layout/meaning_item" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        style="@style/ButtonSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_standard"
        android:text="@string/back"
        app:layout_constraintEnd_toStartOf="@id/btn_next"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_wordDefinition" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        style="@style/ButtonPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/next_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_wordDefinition" />

</androidx.constraintlayout.widget.ConstraintLayout>
