<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dictionary">

    <fragment
        android:id="@+id/navigation_dictionary"
        android:name="com.example.coodeshchallenge_wordsearch.ui.fragments.DictionaryFragment"
        android:label="@string/title_dictionary"
        tools:layout="@layout/fragment_dictionary" >
        <action
            android:id="@+id/action_navigation_dictionary_to_wordPageFragment"
            app:destination="@id/navigation_word_page">
            <argument
                android:name="title"
                android:defaultValue="Word Definition" />
            <argument
                android:name="origin"
                android:defaultValue="Dictionary" />
        </action>
        <action
            android:id="@+id/action_navigation_dictionary_to_errorFragment"
            app:destination="@id/navigation_error">
            <argument
                android:name="page"
                android:defaultValue="Dictionary" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.coodeshchallenge_wordsearch.ui.fragments.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_navigation_history_to_wordPageFragment"
            app:destination="@id/navigation_word_page">
            <argument
                android:name="title"
                android:defaultValue="Word Definition" />
            <argument
                android:name="origin"
                android:defaultValue="History" />
        </action>
        <action
            android:id="@+id/action_navigation_history_to_errorFragment"
            app:destination="@id/navigation_error">
            <argument
                android:name="page"
                android:defaultValue="History" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.coodeshchallenge_wordsearch.ui.fragments.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_navigation_favorites_to_wordPageFragment"
            app:destination="@id/navigation_word_page">
            <argument
                android:name="title"
                android:defaultValue="Word Definition" />
            <argument
                android:name="origin"
                android:defaultValue="Favorites" />
        </action>
        <action
            android:id="@+id/action_navigation_favorites_to_errorFragment"
            app:destination="@id/navigation_error">
            <argument
                android:name="page"
                android:defaultValue="Favorites" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_word_page"
        android:name="com.example.coodeshchallenge_wordsearch.ui.fragments.WordPageFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_word_page">
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="origin"
            app:argType="string" />
        <action
            android:id="@+id/action_wordPageFragment_to_errorFragment"
            app:destination="@id/navigation_error">
            <argument
                android:name="page"
                android:defaultValue="Dictionary" />
        </action>
        <action
            android:id="@+id/action_wordPageFragment_to_navigation_dictionary"
            app:destination="@id/navigation_dictionary" />
        <action
            android:id="@+id/action_wordPageFragment_to_navigation_history"
            app:destination="@id/navigation_history" />
        <action
            android:id="@+id/action_wordPageFragment_to_navigation_favorites"
            app:destination="@id/navigation_favorites" />
    </fragment>

    <fragment
        android:id="@+id/navigation_error"
        android:name="com.example.coodeshchallenge_wordsearch.ui.fragments.ErrorFragment"
        android:label="@string/title_error"
        tools:layout="@layout/fragment_error">
        <argument
            android:name="page"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_error_to_navigation_dictionary"
            app:destination="@id/navigation_dictionary" />
        <action
            android:id="@+id/action_navigation_error_to_navigation_history"
            app:destination="@id/navigation_history" />
        <action
            android:id="@+id/action_navigation_error_to_navigation_favorites"
            app:destination="@id/navigation_favorites" />
    </fragment>

</navigation>
